--- a/configs/unit_sim2real_folder.yaml
+++ b/configs/unit_sim2real_folder.yaml
@@ -35,6 +35,7 @@ gen:
   n_downsample: 2             # number of downsampling layers in content encoder
   n_res: 4                    # number of residual blocks in content encoder/decoder
   pad_type: reflect           # padding type [zero/reflect]
+  coord_conv: false
 dis:
   dim: 64                     # number of filters in the bottommost layer
   norm: none                  # normalization layer [none/bn/in/ln]
